# inf_sem_3

./: README.md
OOPprog2/: CMakeLists.txt  help.h  prog2.cpp
OOPprog2/tests/: CMakeLists.txt  testing.cpp
OOPprog2/vagon/: CMakeLists.txt  help.h  train.cpp  train.h  vagon.cpp  vagon.h
lab1/: CMakeLists.txt  Prog1.cpp  Prog1.h  Prog1main.cpp
